[gd_scene load_steps=9 format=3 uid="uid://dgcbokvrvd8cp"]

[ext_resource type="Texture2D" uid="uid://1mv1seqceifg" path="res://Art/Minigames/minigame_animals_background.png" id="1_52mih"]
[ext_resource type="Script" path="res://Scripts/Minigames/cellos_minigame.gd" id="1_ywij5"]
[ext_resource type="AudioStream" uid="uid://viqrumqa6u3w" path="res://Art/Music/Minigames/2. Los animales/1 - Birds flying high.mp3" id="3_kl063"]
[ext_resource type="PackedScene" uid="uid://8qnhmgdmxsii" path="res://Scenes/pause_menu.tscn" id="3_n5les"]
[ext_resource type="FontFile" uid="uid://c1mr846x6fx8w" path="res://Art/Font/NerkoOne-Regular.ttf" id="3_sqn56"]
[ext_resource type="AudioStream" uid="uid://bytu6v6hsbf2y" path="res://Art/Music/Minigames/2. Los animales/2 - Dolphin's sweetness.mp3" id="4_3olnx"]
[ext_resource type="AudioStream" uid="uid://h1nvg0rssiea" path="res://Art/Music/Minigames/2. Los animales/3 - Elephant's swing.mp3" id="5_bck3y"]
[ext_resource type="AudioStream" uid="uid://bdu5t2cssc2xv" path="res://Art/Music/Minigames/2. Los animales/4 - Horse's rumbling.mp3" id="6_mfksu"]

[node name="Cellos_minigame" type="Node2D"]
script = ExtResource("1_ywij5")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1280.0
offset_bottom = 584.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_52mih")

[node name="Elephant" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = -286.0
offset_right = 236.0
offset_bottom = -237.0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Elefante"
horizontal_alignment = 1

[node name="Dolphin" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 553.0
offset_top = 46.0
offset_right = 654.0
offset_bottom = 81.0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Delfín"
horizontal_alignment = 1

[node name="Horse" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 871.0
offset_top = -198.0
offset_right = 1027.0
offset_bottom = -153.0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Caballo"
horizontal_alignment = 1

[node name="Bird" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1057.0
offset_top = -291.0
offset_right = 1192.0
offset_bottom = -256.0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Pájaro
"
horizontal_alignment = 1

[node name="Repeat" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 433.0
offset_top = -259.0
offset_right = 849.0
offset_bottom = -224.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Haz click  para reproducir el audio"
horizontal_alignment = 1

[node name="Elephant_button" type="TextureButton" parent="."]
offset_left = 63.0
offset_top = 38.0
offset_right = 314.0
offset_bottom = 301.0
mouse_default_cursor_shape = 2

[node name="Dolphin_button" type="TextureButton" parent="."]
offset_left = 479.0
offset_top = 392.0
offset_right = 668.0
offset_bottom = 557.0
mouse_default_cursor_shape = 2

[node name="Horse_button" type="TextureButton" parent="."]
offset_left = 822.0
offset_top = 90.0
offset_right = 1061.0
offset_bottom = 297.0
mouse_default_cursor_shape = 2

[node name="Bird_button" type="TextureButton" parent="."]
offset_left = 1143.0
offset_top = 29.0
offset_right = 1272.0
offset_bottom = 157.0
mouse_default_cursor_shape = 2

[node name="Play_button" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 586.0
offset_top = 69.0
offset_right = 680.0
offset_bottom = 101.0
grow_horizontal = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_sqn56")
theme_override_font_sizes/font_size = 25
text = "Reproducir"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause_menu" parent="CanvasLayer" instance=ExtResource("3_n5les")]
process_mode = 3

[node name="Bird_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kl063")
volume_db = -10.0
bus = &"Music"

[node name="Horse_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mfksu")
volume_db = -15.0
bus = &"Music"

[node name="Elephant_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bck3y")
volume_db = -10.0
bus = &"Music"

[node name="Dolphin_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3olnx")
volume_db = -15.0
bus = &"Music"

[connection signal="pressed" from="Elephant_button" to="." method="_on_elephant_button_pressed"]
[connection signal="pressed" from="Dolphin_button" to="." method="_on_dolphin_button_pressed"]
[connection signal="pressed" from="Horse_button" to="." method="_on_horse_button_pressed"]
[connection signal="pressed" from="Bird_button" to="." method="_on_bird_button_pressed"]
[connection signal="pressed" from="Play_button" to="." method="_on_play_button_pressed"]
